<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codeparl.simplecalculator.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:gravity="fill_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:background="@android:color/background_light"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/defaultValue"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="384dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scroll1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical" >

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal|top"
                    android:layout_weight="3.40" >

                    <Button
                        android:id="@+id/powerbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/power" />

                    <Button
                        android:id="@+id/sqrrootbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/squareRoot" />

                    <Button
                        android:id="@+id/Button02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/clear" />

                    <Button
                        android:id="@+id/deletebtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/delete" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_column="0"
                    android:layout_gravity="left|top"
                    android:layout_row="1" >

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/seven" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/eight" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/nine" />

                    <Button
                        android:id="@+id/dividebtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/divide" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal"
                    android:onClick="getButtonValue"
                    android:layout_row="2" >

                    <Button
                        android:id="@+id/Button07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/four" />

                    <Button
                        android:id="@+id/Button05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/five" />

                    <Button
                        android:id="@+id/Button06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/six" />

                    <Button
                        android:id="@+id/timesbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/times" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="3" >

                    <Button
                        android:id="@+id/Button12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/one" />

                    <Button
                        android:id="@+id/Button10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/two" />

                    <Button
                        android:id="@+id/Button09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/three" />

                    <Button
                        android:id="@+id/minusbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/minus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="4" >

                    <Button
                        android:id="@+id/Button16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/dot" />

                    <Button
                        android:id="@+id/Button14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/zero" />

                    <Button
                        android:id="@+id/equalsbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/equals" />

                    <Button
                        android:id="@+id/plusbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.40"
                        android:onClick="getButtonValue"
                        android:text="@string/plus" />
                </LinearLayout>
            </GridLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>